--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
  <link href="https://fonts.googleapis.com/css?family=Raleway" rel="stylesheet">
   <meta charset="utf-8">
-  <title> Homework 🌮</title>
+  <title> 01-Mexico🌮</title>
   <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
